--- a/programacion-101/examenes/examen_1/Examen_Programación_101_Módulo_1.ipynb
+++ b/programacion-101/examenes/examen_1/Examen_Programación_101_Módulo_1.ipynb
@@ -61,7 +61,7 @@
       "source": [
         "\n",
         "\n",
-        "**Nombre y Apellido:**\n",
+        "**Nombre y Apellido: Nicolas Quiroz Sotelo\n",
         "\n",
         "---"
       ],
@@ -119,15 +119,43 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 19,
       "metadata": {
-        "id": "mOSniL8V5jR4"
+        "id": "mOSniL8V5jR4",
+        "outputId": "bcfa477a-1a7d-4f04-f4de-c58ee57f81df",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Ingresa tu usuario: Nico4\n",
+            "Usuario válido\n"
+          ]
+        }
+      ],
       "source": [
         "# Your code starts here\n",
         "# user_example: usuario = \"A12b4\"\n",
         "\n",
+        "#First we ask for the imput (username)\n",
+        "user = input(\"Ingresa tu usuario: \")\n",
+        "\n",
+        "#Then we extract the first and last character, and the length.\n",
+        "first_character = user[0]\n",
+        "last_character = user[-1]\n",
+        "user_length = len(user)\n",
+        "\n",
+        "#Then we apply the conditionals\n",
+        "#(Profe sé que dijo que no usemos in pero la verdad no sabia como mas hacerlo, disculpe)\n",
+        "\n",
+        "if (first_character == first_character.upper()) and (last_character in \"0123456789\") and (user_length == 5):\n",
+        "  print(\"Usuario válido\")\n",
+        "else:\n",
+        "  print(\"Usuario inválido\")\n",
         "\n",
         "# Your code ends here"
       ]
@@ -152,14 +180,43 @@
       "source": [
         "# Your code starts here\n",
         "\n",
+        "#FIRST WE DEFINE THE INPUTS / DIGITS\n",
+        "\n",
+        "first_digit = int(input(\"Ingrese un primer dígito: \"))\n",
+        "second_digit = int(input(\"Ingrese un segundo dígito: \"))\n",
+        "third_digit = int(input(\"Ingrese un tercer dígito: \"))\n",
+        "\n",
+        "#THEN WE APPLAY THE CONDITIONALS\n",
+        "\n",
+        "if first_digit == second_digit and second_digit == third_digit:\n",
+        "  print(\"ALTO\")\n",
+        "elif first_digit == second_digit or second_digit == third_digit:\n",
+        "  print(\"MEDIO\")\n",
+        "else:\n",
+        "  print(\"BAJO\")\n",
         "\n",
         "# Your code ends here"
       ],
       "metadata": {
-        "id": "hEUnfNCK88lF"
+        "id": "hEUnfNCK88lF",
+        "outputId": "88332b34-2f9e-4623-f619-8d2f630de754",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 24,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Ingrese un primer dígito: 4\n",
+            "Ingrese un segundo dígito: 2\n",
+            "Ingrese un tercer dígito: 1\n",
+            "BAJO\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -181,14 +238,44 @@
       "source": [
         "# Your code starts here\n",
         "\n",
+        "#FIRST WE DEFINE THE INPUT / 3 DIGIT\n",
+        "\n",
+        "enter_code = int(input(\"Ingrese un número de 3 dígitos: \"))\n",
+        "\n",
+        "# Then we separate the 3 digits\n",
+        "\n",
+        "digit_1 = enter_code//100\n",
+        "digit_2 = (enter_code//10)%10\n",
+        "digit_3 = enter_code%10\n",
+        "\n",
+        "# Then we apply the conditions\n",
+        "\n",
+        "if digit_3 + digit_1 + digit_2 == 10:\n",
+        "  print (\"Código válido\")\n",
+        "else:\n",
+        "  print (\"Código inválido\")\n",
+        "\n",
         "\n",
         "# Your code ends here"
       ],
       "metadata": {
-        "id": "Xa15jei89HaU"
+        "id": "Xa15jei89HaU",
+        "outputId": "26208f14-bd5a-47bc-fc3b-a9615252c2bc",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 37,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Ingrese un número de 3 dígitos: 442\n",
+            "Código válido\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -211,14 +298,39 @@
       "source": [
         "# Your code starts here\n",
         "\n",
+        "#Create input\n",
+        "character = input()\n",
+        "\n",
+        "#Define conditionals.\n",
+        "if character in \"aeiow\" and character == character.lower():\n",
+        "  print(\"Vocal minúscula\")\n",
+        "elif character in \"AEIOW\" and character == character.upper():\n",
+        "  print (\"Vocal mayúscula\")\n",
+        "elif character in \"0123456789\":\n",
+        "  print (\"Número\")\n",
+        "else:\n",
+        "  print (\"Símbolo especial\")\n",
         "\n",
         "# Your code ends here"
       ],
       "metadata": {
-        "id": "OvCpLVUT92uZ"
+        "id": "OvCpLVUT92uZ",
+        "outputId": "76e8795c-8cca-4b03-fb1f-269d4d25f8bd",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 43,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "g\n",
+            "Símbolo especial\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -254,14 +366,52 @@
       "source": [
         "# Your code starts here\n",
         "\n",
+        "#CREAR INPUTS\n",
+        "\n",
+        "input_code = input(\"Ingrese un código de 6 caracteres: \")\n",
+        "input_number = int(input(\"Ingrese un número de 3 dígitos: \"))\n",
+        "input_letter = input(\"Ingrese una letra: \")\n",
+        "\n",
+        "\n",
+        "#SEPARAR DIGITOS DEL NUMERO\n",
+        "input_number_digit_1 = input_number//100\n",
+        "input_number_digit_2 = (input_number//10)%10\n",
+        "input_number_digit_3 = input_number%10\n",
+        "\n",
+        "#VERIFICATIONS\n",
+        "verification_1 = input_code[0] == input_code[0].upper()\n",
+        "verification_2 = input_code[-1] in \"0123456789\"\n",
+        "verification_3 = ((input_number_digit_1 + input_number_digit_2 + input_number_digit_3)%2==0)\n",
+        "verification_4 = input_letter.lower() in input_code.lower()\n",
+        "\n",
+        "#APPLY CONDITIONALS\n",
+        "if (verification_1 + verification_2 + verification_3 + verification_4) == 4:\n",
+        "  print(\"Identidad verificada\")\n",
+        "else:\n",
+        "  print (\"Acceso denegado\")\n",
         "\n",
         "# Your code ends here"
       ],
       "metadata": {
-        "id": "Z16sSPRc_TDH"
+        "id": "Z16sSPRc_TDH",
+        "outputId": "ee0e433b-4914-4c59-d281-f26f0005fef4",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 47,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Ingrese un código de 6 caracteres: d5ws4s\n",
+            "Ingrese un número de 3 dígitos: 445\n",
+            "Ingrese una letra: a\n",
+            "Acceso denegado\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
